# hangman-tools

./: .gitignore  README.md  hangman-regexp.py  main.py  make-hangman-phrase.py  parsing.py  pyproject.toml
src/hangman_tools/hangman_regexp/: __init__.py
