[project]
name = "hangman-tools"
version = "0.1.9"
description = "Tools for playing and running hangman-like word games"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "pyparsing>=3.3.2",
]

[project.scripts]
hangman-regexp = "hangman_tools.hangman_regexp:main"
make-hangman-phrase = "hangman_tools.make_hangman_phrase:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
